--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <!-- HEADER -->
   <header>
     <div class="container">
       <h1>Zakaria Ibrahim</h1>
@@ -22,7 +21,6 @@
     </div>
   </header>
 
-  <!-- HERO SECTION -->
   <section id="hero">
     <div class="container">
       <h2>Welcome to My Portfolio</h2>
@@ -31,22 +29,20 @@
     </div>
   </section>
 
-  <!-- ABOUT SECTION -->
   <section id="about" class="container">
     <h2>About Me</h2>
     <div class="about-content">
-      <img src="/avatar.png" alt="Abstract avatar representing Zakaria Ibrahim">
+      <img src="/avatar.png" alt="Avatar">
       <p>Hello! My name is <strong>Zakaria Ibrahim</strong>. I’m currently studying web design and development. I enjoy combining creativity and logic to build modern, responsive websites that provide great user experiences. This page is the start of my professional portfolio, and I’ll continue to expand it as my skills develop.</p>
     </div>
   </section>
 
-  <!-- PROJECTS SECTION -->
   <section id="projects" class="container">
     <h2>My Work</h2>
     <p>Here are some projects I’ve created to showcase my web design and development skills. The project section uses CSS Grid to ensure the layout works smoothly on all devices.</p>
     
     <div class="project-grid">
-      <!-- Food Delivery Website Project -->
+      
       <div class="project-card">
         <img src="food delivery.jpeg" alt="Screenshot of a food delivery website">
         <h3>Food Delivery Website</h3>
@@ -54,7 +50,6 @@
         <p><strong>Technologies:</strong> HTML5, CSS3, Flexbox, CSS Grid, Responsive Design</p>
       </div>
 
-      <!-- Barber Appointment Booking Project -->
       <div class="project-card">
         <img src="barber shop.jpeg" alt="Screenshot of a barber appointment booking web app">
         <h3>Barber Appointment Booking Web App</h3>
@@ -64,7 +59,6 @@
     </div>
   </section>
 
-  <!-- CONTACT SECTION -->
   <section id="contact" class="container">
     <h2>Contact Me</h2>
     <p>If you’d like to collaborate or learn more about my work, feel free to reach out!</p>
